// file: pkg/organization/proto/requests/create_department_request.proto

edition = "2023";

package gcommon.v1.organization;

import "common/proto/request_metadata.proto";
import "pkg/organization/proto/department.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message CreateDepartmentRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Department information to create
  gcommon.v1.organization.Department department = 2;

  // Validate only without persisting if true
  bool validate_only = 3;
}
