// file: pkg/organization/proto/responses/create_department_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/error.proto";
import "pkg/organization/proto/department.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message CreateDepartmentResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // Newly created department information
  gcommon.v1.organization.Department department = 3;
}
