// file: pkg/organization/proto/requests/delete_department_request.proto

edition = "2023";

package gcommon.v1.organization;

import "common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message DeleteDepartmentRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Department identifier to delete
  string department_id = 2;
}
