// file: pkg/organization/proto/responses/delete_department_response.proto
edition = "2023";

package gcommon.v1.organization;

import "common/proto/error.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message DeleteDepartmentResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;
}
