// file: pkg/organization/proto/requests/get_department_request.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/jdfalk/gcommon/pkg/organization/proto;organizationpb";
option features.(pb.go).api_level = API_OPAQUE;

message GetDepartmentRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;
  
  // Department identifier
  string department_id = 2;
}
