// file: pkg/organization/proto/responses/get_department_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/organization/proto/jdfalk/gcommon/pkg/organization/proto;organizationpb";
option features.(pb.go).api_level = API_OPAQUE;

message GetDepartmentResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;
  
  // Department information
  gcommon.v1.organization.Department department = 3;
}
