// file: pkg/organization/proto/requests/list_departments_request.proto

edition = "2023";

package gcommon.v1.organization;

import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message ListDepartmentsRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Organization identifier to list departments for
  string organization_id = 2;

  // Pagination size (max results per page)
  int32 page_size = 3;

  // Pagination token from previous response
  string page_token = 4;

  // Optional filter expression
  string filter = 5;
}
