// file: pkg/organization/proto/responses/list_departments_response.proto
syntax = "proto3";

package gcommon.v1.organization;

import "pkg/organization/proto/department.proto";
import "pkg/common/proto/error.proto";
import "pkg/common/proto/paginated_response.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message ListDepartmentsResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // List of departments returned
  repeated gcommon.v1.organization.Department departments = 3 [lazy = true];

  // Pagination metadata
  gcommon.v1.common.PaginatedResponse pagination = 4;
}
