// file: pkg/organization/proto/requests/update_department_request.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/request_metadata.proto";
import "google/protobuf/field_mask.proto";
import "pkg/organization/proto/messages/department.proto";

option go_package = "../../../../pkg/organization/pb;organizationpb";
option features.(pb.go).api_level = API_HYBRID;

message UpdateDepartmentRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;
  
  // Department identifier to update
  string department_id = 2;

  // Updated department information
  gcommon.v1.organization.Department department = 3;

  // Fields to update in partial mode
  google.protobuf.FieldMask update_mask = 4;

  // Validate only without persisting if true
  bool validate_only = 5;
}
